--- a/index.html
+++ b/index.html
@@ -133,18 +133,18 @@
 
     <!-- Firebase SDK -->
     <script type="module">
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
-        import { getDatabase, ref, onValue, push, set } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js';
+        import { getDatabase, ref, onValue, push, set } from 'https://www.gstatic.com/firebasejs/12.0.0/firebase-database.js';
         
-        // Firebase configuration - REPLACE WITH YOUR CONFIG
+        // Firebase configuration
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            databaseURL: "YOUR_DATABASE_URL",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyBZCW5tAWc-I5XAXqFDRazoeWIhQtNxcu4",
+            authDomain: "econ7110.firebaseapp.com",
+            databaseURL: "https://econ7110-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "econ7110",
+            storageBucket: "econ7110.firebasestorage.app",
+            messagingSenderId: "667390196212",
+            appId: "1:667390196212:web:59b6cc3983be3a1aa1a1a1"
         };
         
         // Initialize Firebase
