--- a/admin.html
+++ b/admin.html
@@ -559,5 +559,16 @@
             }
         });
     </script>
+
+    <div class="section">
+    <h2>Settings</h2>
+    <label class="toggle-switch">
+        <input type="checkbox" id="resultsVisibleToggle">
+        <span class="slider"></span>
+    </label>
+    <span>Show results to students</span>
+    </div>
+
+    
 </body>
 </html>
