--- a/admin.html
+++ b/admin.html
@@ -355,7 +355,7 @@
             <div class="section">
                 <h2>Settings</h2>
                 <label class="toggle-switch">
-                    <input type="checkbox" id="resultsVisibleToggle">
+                    <input type="checkbox" id="resultsVisibleToggle" onchange="toggleResultsVisibility(this.checked)">
                     <span class="slider"></span>
                 </label>
                 <span>Show results to students</span>
@@ -406,6 +406,8 @@
                 document.getElementById('adminPanel').classList.remove('hidden');
                 loadQuestions();
                 generateQRCode();
+                loadSettings();
+                
             } else {
                 document.getElementById('loginError').textContent = 'Invalid password';
             }
@@ -421,6 +423,26 @@
         if (localStorage.getItem('adminLoggedIn') === 'true') {
             document.getElementById('loginScreen').classList.add('hidden');
             document.getElementById('adminPanel').classList.remove('hidden');
+        }
+
+        // Toggle results visibility
+        window.toggleResultsVisibility = function(visible) {
+            const settingsRef = ref(database, 'settings/resultsVisible');
+            set(settingsRef, visible).then(() => {
+                console.log('Results visibility set to:', visible);
+            }).catch(error => {
+                console.error('Error setting visibility:', error);
+                alert('Error updating settings');
+            });
+        };
+
+        // initialize the toggle when admin loads
+        function loadSettings() {
+            const settingsRef = ref(database, 'settings/resultsVisible');
+            onValue(settingsRef, (snapshot) => {
+                const isVisible = snapshot.val();
+                document.getElementById('resultsVisibleToggle').checked = isVisible === true;
+            });
         }
         
         // Generate QR Code
