--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                 total: totalAnswered,
                 lastUpdated: Date.now()
             });
-        }ibility = function() {
+        }visibility = function() {
             showOnLeaderboard = document.getElementById('showOnLeaderboard').checked;
             localStorage.setItem('showOnLeaderboard', showOnLeaderboard);
             updatePrivacyNote();
