--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
             <span class="nickname-text">
                 Playing as: <strong id="currentNickname">Loading...</strong>
             </span>
-            <div class="nickname-buttons">
+            <!-- <div class="nickname-buttons">
                 <button onclick="goAnonymous()">Go Anonymous</button>
-            </div>
+            </div> -->
         </div>
     </div>
     
@@ -315,7 +315,7 @@
             <div class="welcome-buttons">
                 <button class="btn-accept" onclick="acceptName()">Use This Name</button>
                 <button class="btn-new" id="newNameBtn" onclick="generateNewName()">Try Another</button>
-                <button class="btn-new" onclick="goAnonymousFromWelcome()">Go Anonymous</button>
+                <!-- <button class="btn-new" onclick="goAnonymousFromWelcome()">Go Anonymous</button> -->
             </div>
             <p style="margin-top: 15px; font-size: 14px; color: #666;">
                 You can change your privacy settings anytime
