--- a/index.html
+++ b/index.html
@@ -346,12 +346,16 @@
         // Random name components
         const adjectives = [
             'Clever', 'Bright', 'Swift', 'Wise', 'Happy', 'Lucky', 'Brave', 'Cool',
-            'Smart', 'Quick', 'Keen', 'Sharp', 'Witty', 'Bold', 'Calm', 'Eager'
+            'Smart', 'Quick', 'Keen', 'Sharp', 'Witty', 'Bold', 'Calm', 'Eager',
+            'Friendly', 'Mighty', 'Noble', 'Gentle', 'Speedy', 'Cheerful', 'Crafty', 'Daring',
+            'Fearless', 'Jolly', 'Proud', 'Sneaky', 'Charming', 'Brilliant', 'Graceful', 'Nimble'
         ];
         
         const animals = [
             'Panda', 'Eagle', 'Dolphin', 'Owl', 'Tiger', 'Lion', 'Penguin', 'Koala',
-            'Falcon', 'Wolf', 'Fox', 'Bear', 'Hawk', 'Otter', 'Seal', 'Lynx'
+            'Falcon', 'Wolf', 'Fox', 'Bear', 'Hawk', 'Otter', 'Seal', 'Lynx',
+            'Kangaroo', 'Wallaby', 'Wombat', 'Echidna', 'Platypus', 'Dingo', 'Emu', 'Kookaburra',
+            'Quokka', 'Bilby', 'Numbat', 'Cassowary', 'Cockatoo', 'Possum', 'Bandicoot', 'Dugong'
         ];
         
         // Session management
