--- a/results.html
+++ b/results.html
@@ -496,8 +496,7 @@
                 mainContent.innerHTML = `
                     <div class="message-container">
                         <div class="waiting-message">
-                            <div class="waiting-icon">🕐</div>
-                            <h2 class="waiting-title">Waiting for instructor<span class="loading-dots"></span></h2>
+                            <h2 class="waiting-title">Results Pending</h2>
                             <p class="waiting-subtitle">The instructor will display results shortly.<br>Please stay on this page.</p>
                         </div>
                     </div>
