--- a/admin.html
+++ b/admin.html
@@ -305,7 +305,7 @@
     <div id="loginScreen">
         <div class="header">
             <div class="header-content">
-                <h1>Admin Panel - Student Response System</h1>
+                <h1>Admin Panel - ECON7110 Live</h1>
             </div>
         </div>
         <div class="auth-container">
