--- a/results.html
+++ b/results.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Results - Student Response System</title>
+    <title>Results - ECON7110 Live</title>
     <style>
         * {
             margin: 0;
