--- a/index.html
+++ b/index.html
@@ -108,14 +108,6 @@
             color: #333;
         }
         
-        .point-value {
-            background-color: #51247A;
-            color: white;
-            padding: 4px 12px;
-            border-radius: 20px;
-            font-size: 14px;
-            font-weight: 500;
-        }
         
         .answer-option {
             display: block;
@@ -532,8 +524,7 @@
                 html += `
                     <div class="question-card">
                         <div class="question-header">
-                            <div class="question-title">Question ${index + 1}: ${question.text}</div>
-                            <div class="point-value">${points} ${points === 1 ? 'point' : 'points'}</div>
+                        <div class="question-title">Question ${index + 1} (${points} ${points === 1 ? 'point' : 'points'}): ${question.text}</div>
                         </div>
                         ${question.answers.map((answer, answerIndex) => {
                             let classes = 'answer-option';
