--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Student Response System</h1>
+        <h1>ECON7110 Live</h1>
     </div>
     
     <div class="nickname-bar">
