--- a/results.html
+++ b/results.html
@@ -383,7 +383,7 @@
 <body>
     <div class="header">
         <div class="header-content">
-            <h1>Live Results - Student Response System</h1>
+            <h1>Results - ECON7110 Live</h1>
             <div>
                 <a href="index.html" class="student-link">← Back to Questions</a>
             </div>
